--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "Stefan Dusan",
   "dependencies": {
-    "newman": "^4.5.1"
+    "newman": "^4.5.1",
+    "newman-reporter-html": "^1.0.3"
   }
 }
